# sms-extracror

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-local-db.yaml  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
src/: config_loader.py  modem.py  settings.py  sms_export.py
src/models/: messages_models.py
src/repositories/: pg_repository.py  saver.py  telegram_alerting.py
src/sqls/: init.sql
