[tool.poetry]
name = "SMS Extractor"
version = "0.1.0"
description = ""
authors = ["Evgenii Shumilov <mechnotech@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.6.4"
pydantic-settings = "2.1.0"
pyserial = "3.5"
smspdudecoder = "2.1.0"
psycopg2 = "2.9.10"

[virtualenvs]
create = true
in-project = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
